Fixing Search bar on Mobile

--- a/flask-nginx-rtmp-mgmt/static/css/main.css
+++ b/flask-nginx-rtmp-mgmt/static/css/main.css
@@ -104,6 +104,10 @@
         margin:0 auto;
         width:280px;
     }
+
+    .searchBar {
+        width: 300px;
+    }
 }
 
 .chat {
